--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Toobolist</title>
 </head>
 <body>
+    <header class="page-header">
+        <img class="logo" src="img/Toboolist-logo.jpg" alt="Toboolist-logo">
+     </header>
+
+    <main class="page-content">
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
