--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
      </header>
 
     <main class="page-content">
+        <div class="first-content">
+            <button class="bottone-1">Add Task</button> <button class="bottone-2">Add Section</button>
+        </div>
+        <div class="second-content">
+            ciao
+        </div>
 
     </main>
 
-    <footer>
-
-    </footer>
     
 </body>
 </html>
