--- a/index.html
+++ b/index.html
@@ -16,8 +16,53 @@
             <button class="bottone-1">Add Task</button> <button class="bottone-2">Add Section</button>
         </div>
         <div class="second-content">
-            ciao
+            <h3 class="list-title">
+                <div class="check">
+                    &#9660
+                </div>
+                New Task
+            </h3>
+            <ul>
+                <li class="list">
+                    <div class="check">&#9989</div>
+                    <div class="list-2">
+                        Quarterly Newsletter
+                        <button class="bottone-3-editorial">Editorial</button>
+                    </div>
+                </li>
+            </ul>
+            <h3 class="list-title">
+                <div class="check">
+                    &#9660
+                </div>
+                Today
+            </h3>
+            <ul>
+                <li class="list">
+                    <div class="list-2">
+                        &#9989
+                        Recruiting blog post
+                        <button class="bottone-3-editorial">Editorial</button>
+                    </div>
+                    <div class="list-2">
+                        &#9989
+                        Recruiting blog post
+                        <button class="bottone-3">Q1 Goals</button>
+                    </div>
+                    <div class="list-2">
+                        &#9989
+                        Interview John H.
+                        <button class="bottone-3">Recruiting</button>
+                    </div>
+                    <div class="list-2">
+                        &#9989
+                        Summit update to mobile storefronts
+                        <button class="bottone-3">Mobile</button>
+                    </div>
+                </li>
+            </ul>
         </div>
+        
 
     </main>
 
