--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             </h3>
             <ul>
                 <li class="list">
-                    <div class="check">&#9989</div>
                     <div class="list-2">
+                        &#9989
                         Quarterly Newsletter
                         <button class="bottone-3-editorial">Editorial</button>
                     </div>
@@ -47,20 +47,50 @@
                     <div class="list-2">
                         &#9989
                         Recruiting blog post
-                        <button class="bottone-3">Q1 Goals</button>
+                        <button class="bottone-4-editorial">Q1 Goals</button>
                     </div>
                     <div class="list-2">
-                        &#9989
+                        &#10060
                         Interview John H.
-                        <button class="bottone-3">Recruiting</button>
+                        <button class="bottone-5-editorial">Recruiting</button>
                     </div>
                     <div class="list-2">
                         &#9989
                         Summit update to mobile storefronts
-                        <button class="bottone-3">Mobile</button>
+                        <button class="bottone-6-editorial">Mobile</button>
                     </div>
                 </li>
             </ul>
+        </ul>
+        <h3 class="list-title">
+            <div class="check">
+                &#9660
+            </div>
+            Upcoming
+        </h3>
+        <ul>
+            <li class="list">
+                <div class="list-2">
+                    &#10060
+                    Schedule meeting whit Alex
+                </div>
+                <div class="list-2">
+                    &#9989
+                    Homepage refresh
+                    <button class="bottone-7-editorial">Website</button>
+                </div>
+                <div class="list-2">
+                    &#9989
+                    Onboard new Sales team members
+                    <button class="bottone-8-editorial">Recruiting</button>
+                </div>
+                <div class="list-2">
+                    &#9989
+                    Review editorial calendar
+                    <button class="bottone-9-editorial">Editorial</button>
+                </div>
+            </li>
+        </ul>
         </div>
         
 
